--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,17 @@ before_install:
 - sudo apt-get install python-fontforge
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
-# - export LD_LIBRARY_PATH=/usr/local/lib
 - pip install git+https://github.com/behdad/fontTools.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
 script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
 branches:
   only:
-    - master
+  - master
 after_script:
 - rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
+env:
+  global:
+    secure: C+2IxiirYTG1EzX5DTcKdMcL8q9b2Hjo5PvC29SOSRdQ3UayDyV+HNDKWwusTEP30+djYE5eM5x/SUn1HlHDOVPK+Iu6fFy7eHIQdMraxP6zkJ/pydttKKj9nTYtswihDbSlKxL4LLr8+9UuAXzoHc1mWSUO6ByV/5/X+B5rxvM=
